tests/snapshots/eval__member_access__member_extended.snap
---
source: tests/eval.rs
expression: "run(r#\"print({\"first-name\": \"Ana\"}.@first-name)\"#)"
---
Ok(
    "Ana\n",
)
