tests/snapshots/eval__member_access__member_on_int_is_type_error.snap
---
source: tests/eval.rs
expression: "run(\"print((1).x)\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot access field `x` on Int",
        span: Span {
            start: 6,
            end: 11,
        },
        cause: None,
    },
)
