tests/snapshots/eval__member_access__member_on_list_is_type_error.snap
---
source: tests/eval.rs
expression: "run(\"print([1, 2].name)\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot access field `name` on List",
        span: Span {
            start: 6,
            end: 17,
        },
        cause: None,
    },
)
