tests/snapshots/eval__member_access__member_on_null_is_type_error.snap
---
source: tests/eval.rs
expression: "run(\"print(null.x)\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot access field `x` on Null",
        span: Span {
            start: 6,
            end: 12,
        },
        cause: None,
    },
)
