tests/snapshots/eval__member_access__member_plain.snap
---
source: tests/eval.rs
expression: "run(r#\"print({name: \"Ana\"}.name)\"#)"
---
Ok(
    "Ana\n",
)
